# foxy-confidential

./: .env.example  .gitattributes  .gitignore  BACKEND_SETUP.md  FLOW_DIAGRAMS.md  GIT_LFS_MIGRATION_SUMMARY.md  GIT_LFS_SETUP.md  GOOGLE_MAPS_SETUP.md  GOOGLE_PLACES_API.md  IMPLEMENTATION_SUMMARY.md  LOCATION_DETECTION_FEATURE.md  OPENSTREETMAP_GUIDE.md  PERFORMANCE_GUIDE.md  PWA_SETUP.md  README.md  SECURITY.md  SECURITY_CHECKLIST.md  SECURITY_IMPLEMENTATION.md  SETUP.md  TESTING_LOCATION_DETECTION.md  TROUBLESHOOTING.md  USER_RESTAURANTS_FEATURE.md  electron-main.js  electron-package.json  package-lock.json  package.json  security-audit.ps1  security-audit.sh  test-api.bat  test-api.ps1
.git-hooks/: README.md  pre-commit
cpp-server/: CMakeLists.txt  README.md  main.cpp
public/: index.html  manifest.json
server/: .env.example  README.md  package-lock.json  package.json  server.js  test-server.js
server/config/: database.js  database.sql
server/controllers/: authController.js  restaurantController.js
server/middleware/: auth.js  errorHandler.js  rateLimiter.js
server/models/: Admin.js  Restaurant.js  Review.js  User.js
server/routes/: admin.js  auth.js  restaurants.js  reviews.js  users.js
src/: App.css  App.js  index.css  index.js  service-worker.js
src/components/AddRestaurantModal/: AddRestaurantModal.css  index.js
src/components/Blog/: index.js
src/components/BootstrapCarousel/: index.js
src/data/: restaurantData.js
src/hooks/: useFavorites.js  useLocationDetection.js  useUserRestaurants.js
src/services/: googlePlacesService.js
(+37 files in other folders)
